find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})

add_executable(BType_test BType_test.cc)
add_executable(CompUnit_test CompUnit_test.cc)
add_executable(Decl_test Decl_test.cc)
add_executable(FuncDef_test FuncDef_test.cc)
add_executable(FuncType_test FuncType_test.cc)
add_executable(ConstDecl_test ConstDecl_test.cc)
add_executable(ConstDef_test ConstDef_test.cc)
add_executable(ConstInitVal_test ConstInitVal_test.cc)
add_executable(VarDecl_test VarDecl_test.cc)
add_executable(VarDef_test VarDef_test.cc)
add_executable(InitVal_test InitVal_test.cc)
add_executable(FuncFParams_test FuncFParams_test.cc)
add_executable(FuncFParam_test FuncFParam_test.cc)
add_executable(Block_test Block_test.cc)
add_executable(BlockItem_test BlockItem_test.cc)
add_executable(Stmt_test Stmt_test.cc)
add_executable(Exp_test Exp_test.cc)
add_executable(Cond_test Cond_test.cc)
add_executable(LVal_test LVal_test.cc)
add_executable(PrimaryExp_test PrimaryExp_test.cc)
add_executable(Number_test Number_test.cc)
add_executable(UnaryExp_test UnaryExp_test.cc)
add_executable(UnaryOp_test UnaryOp_test.cc)
add_executable(FuncRParams_test FuncRParams_test.cc)
add_executable(MulExp_test MulExp_test.cc)
add_executable(MulExpL_test MulExpL_test.cc)
add_executable(AddExp_test AddExp_test.cc)
add_executable(AddExpL_test AddExpL_test.cc)
add_executable(RelExp_test RelExp_test.cc)
add_executable(RelExpL_test RelExpL_test.cc)
add_executable(EqExp_test EqExp_test.cc)
add_executable(EqExpL_test EqExpL_test.cc)
add_executable(LAndExp_test LAndExp_test.cc)
add_executable(LAndExpL_test LAndExpL_test.cc)
add_executable(LOrExp_test LOrExp_test.cc)
add_executable(LOrExpL_test LOrExpL_test.cc)
add_executable(ConstExp_test ConstExp_test.cc)
add_executable(Ident_test Ident_test.cc)

target_link_libraries(BType_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(CompUnit_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(Decl_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(FuncDef_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(FuncType_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(ConstDecl_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(ConstDef_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(ConstInitVal_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(VarDecl_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(VarDef_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(InitVal_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(FuncFParams_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(FuncFParam_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(Block_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(BlockItem_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(Stmt_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(Exp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(Cond_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(LVal_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(PrimaryExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(Number_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(UnaryExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(UnaryOp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(FuncRParams_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(MulExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(MulExpL_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(AddExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(AddExpL_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(RelExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(RelExpL_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(EqExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(EqExpL_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(LAndExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(LAndExpL_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(LOrExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(LOrExpL_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(ConstExp_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)
target_link_libraries(Ident_test ${GTEST_BOTH_LIBRARIES}  ${llvm_libs} pthread sycompiler_base_static)

gtest_discover_tests(BType_test)
gtest_discover_tests(CompUnit_test)
gtest_discover_tests(Decl_test)
gtest_discover_tests(FuncDef_test)
gtest_discover_tests(FuncType_test)
gtest_discover_tests(ConstDecl_test)
gtest_discover_tests(ConstDef_test)
gtest_discover_tests(ConstInitVal_test)
gtest_discover_tests(VarDecl_test)
gtest_discover_tests(VarDef_test)
gtest_discover_tests(InitVal_test)
gtest_discover_tests(FuncFParams_test)
gtest_discover_tests(FuncFParam_test)
gtest_discover_tests(Block_test)
gtest_discover_tests(BlockItem_test)
gtest_discover_tests(Stmt_test)
gtest_discover_tests(Exp_test)
gtest_discover_tests(Cond_test)
gtest_discover_tests(LVal_test)
gtest_discover_tests(PrimaryExp_test)
gtest_discover_tests(Number_test)
gtest_discover_tests(UnaryExp_test)
gtest_discover_tests(UnaryOp_test)
gtest_discover_tests(FuncRParams_test)
gtest_discover_tests(MulExp_test)
gtest_discover_tests(MulExpL_test)
gtest_discover_tests(AddExp_test)
gtest_discover_tests(AddExpL_test)
gtest_discover_tests(RelExp_test)
gtest_discover_tests(RelExpL_test)
gtest_discover_tests(EqExp_test)
gtest_discover_tests(EqExpL_test)
gtest_discover_tests(LAndExp_test)
gtest_discover_tests(LAndExpL_test)
gtest_discover_tests(LOrExp_test)
gtest_discover_tests(LOrExpL_test)
gtest_discover_tests(ConstExp_test)
gtest_discover_tests(Ident_test)
